--- a/Java/build.gradle
+++ b/Java/build.gradle
@@ -7,9 +7,13 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+    // testImplementation 'org.hamcrest:hamcrest-library:2.2'
+    // testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    // testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
+    // testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 group = 'com.gildedrose'
